 2012-07-29 10:35  dimitr 
   M src/jrd/ini.epp
Propagate the solution for fld_counter to both metadata caches. This fixes the regression of not being able to select from the MON$ tables in Dialect 1.

 2012-07-29 00:24  robocop 
   M doc/sql.extensions/README.builtin_functions.txt
Misc.

 2012-07-27 01:48  asfernandes 
   M extern/editline/configure
   M src/jrd/IntlManager.cpp
Fixed CORE-3820 - RDB$TYPES contain duplicate character sets.

 2012-07-26 16:20  asfernandes 
   M src/jrd/RecordSourceNodes.cpp
Fixed CORE-3883 - Ambiguous field name in the trigger when it does a select from the table.

 2012-07-24 07:54  mkubecek 
   M src/common/db_alias.cpp
Do not prepend DatabaseAccess paths to connection strings.

 2012-07-23 15:29  mkubecek 
   M builds/install/arch-specific/linux/misc/firebird.xinetd.in
Use firebird instead of fb_smp_server in xinetd config template

 2012-07-23 09:48  hvlad 
   M src/jrd/exe.cpp
   M src/jrd/tra.h
Fixed bug CORE-3895 : High memory usage when PSQL code SELECT's from stored procedure which modified some data

 2012-07-22 01:42  asfernandes 
   M src/dsql/DdlNodes.epp
Fixed CORE-3894 - Wrong numbers in error message for decreasing char/varchar columns.

 2012-07-20 02:41  asfernandes 
   M src/dsql/BlrWriter.cpp
   M src/dsql/BlrWriter.h
   M src/dsql/DdlNodes.h
   M src/dsql/DsqlCompilerScratch.h
   M src/dsql/StmtNodes.cpp
   M src/dsql/ddl.cpp
   M src/dsql/dsql.cpp
   M src/dsql/dsql.h
Fixed CORE-3893 - Cannot restore tpcc database in FB 3.0.

 2012-07-19 07:49  alexpeshkoff 
   M src/include/gen/msgs.h
   M src/jrd/svc.cpp
   M src/msgs/messages2.sql
Misc diags

 2012-07-19 01:52  asfernandes 
   M src/include/gen/msgs.h
   M src/lock/print.cpp
   M src/msgs/messages2.sql
Misc.

 2012-07-16 10:40  alexpeshkoff 
   M src/utilities/fbsvcmgr/fbsvcmgr.cpp
Removed debugging code

 2012-07-15 12:43  dimitr 
   M src/jrd/btr.cpp
Calculate the index statistics correctly for very large tables.

 2012-07-14 21:26  hvlad 